--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,5 +1,3 @@
-controllers:
-    resource:
-        path: ../src/Controller/
-        namespace: App\Controller
-    type: attribute
+swagger_ui:
+    path: /docs
+    controller: api_platform.swagger.action.ui
