--- a/.env
+++ b/.env
@@ -25,9 +25,9 @@ PHP_VERSION=8.3.6
 NGINX_VERSION=1.22.1
 POSTGRES_VERSION=15.1
 ADMINER_VERSION=4.8.1
-POSTGRES_DB=commentarius
-POSTGRES_USER=commentarius
-POSTGRES_PASSWORD=pass1234
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
 ###> doctrine/doctrine-bundle ###
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
