--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "doctrine/doctrine-bundle": "^2.12",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^3.1",
+        "guzzlehttp/guzzle": "^7.8",
         "nelmio/cors-bundle": "^2.4",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.29",
